--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
 
     <script>
-        const link = document.getElementById('link').value;
-        console.log(link);     
+        function download() {
+            const link = document.getElementById('link').value;
+            console.log(link);   
+        }
     </script>
 </body>
 </html>
