test with download

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     return response.json()
                 })
                 .then((response) => {
-                    window.location = 'http://localhost:3000/' + response.video
+                    console.log(response.video);
                 })
         }
     </script>
