--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
                 headers: {'Content-Type': 'Application/json'},
                 body: JSON.stringify({url: link})
             }) 
-                .then((response) => {
-                    return console.log(response.title);
-                })
+                // .then((response) => {
+                //     return console.log(response.title);
+                // })
+
+                // aq unda vnaxo ras vigeb 
         }
     </script>
 </body>
